--- a/client/src/styles/TodoComponent.scss
+++ b/client/src/styles/TodoComponent.scss
@@ -1,2 +1,12 @@
-.todo {
+.AddTodo {
+  background-color: aqua;
+  text-align: center;
+}
+
+.Todo {
+  background-color: blue;
+  text-align: center;
+  border-radius: 30%;
+  width: 500px;
+  height: 300px;
 }
